fixed canvas stretch on mobile (again)

--- a/src/App.scss
+++ b/src/App.scss
@@ -38,7 +38,3 @@ canvas {
         }
     }
 }
-
-.canvases {
-    display: flex;
-}
